// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserService /> <Create /> should create a user successfully 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "email": "jdoe@me.com",
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": "https://example.com/profile.jpg",
  "username": "jDoe453",
}
`;

exports[`<UserService /> <Create /> should create a user successfully without profile picture 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "email": "jdoe@me.com",
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": "https://example.com/profile.jpg",
  "username": "jDoe453",
}
`;

exports[`<UserService /> <Delete /> should delete a user successfully 1`] = `
{
  "message": "User deleted successfully",
}
`;

exports[`<UserService /> <FindAll /> should search for a list of users  1`] = `
{
  "count": 1,
  "users": [
    {
      "id": "42-d-f-df4",
      "name": "John Doe",
      "profileImg": "https://example.com/profile.jpg",
      "username": "jDoe453",
    },
  ],
}
`;

exports[`<UserService /> <FindOne /> should return a user successfully 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "email": "jdoe@me.com",
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": "https://example.com/profile.jpg",
  "username": "jDoe453",
}
`;

exports[`<UserService /> <Reactivate /> should reactivate a user successfully 1`] = `
{
  "message": "Account reactivated successfully",
}
`;

exports[`<UserService /> <RemoveProfilePicture /> should not remove profile picture if user does not have one 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "email": "jdoe@me.com",
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": null,
  "username": "jDoe453",
}
`;

exports[`<UserService /> <RemoveProfilePicture /> should remove profile picture successfully 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "email": "jdoe@me.com",
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": null,
  "username": "jDoe453",
}
`;

exports[`<UserService /> <Update /> should update a user successfully with profile picture 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "email": "jdoe@me.com",
  "id": "42-d-f-df4",
  "name": "John Doe",
  "password": "new_password",
  "profileImg": "https://example.com/profile.jpg",
  "username": "jDoe453",
}
`;

exports[`<UserService /> <Update /> should update a user successfully without profile picture 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "email": "jdoe@me.com",
  "id": "42-d-f-df4",
  "name": "John Doe",
  "password": "new_password",
  "profileImg": null,
  "username": "jDoe453",
}
`;
